--- a/invoice-request.html
+++ b/invoice-request.html
@@ -8,15 +8,25 @@
   <title></title>
 
   <style type="text/css">
+    body {
+        font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    }
   </style>    
 </head>
-<body style="margin:0; padding:0; background-color:#ffffff;">
+<body style="margin:0; padding:0; background-color:#FAFAFA;">
   <center>
-    <table width="60%" border="0" cellpadding="0" cellspacing="0" bgcolor="#ffffff">
+    <table width="100%" border="0" cellpadding="40" cellspacing="0" bgcolor="#ffffff" style="max-width: 600px; min-width: 300px; border-radius: 7px 7px 7px 7px; border: 1px solid #DFDFDF; margin-top: 56px;">
         <tr>
-                <img style="margin: 5px 0 25px 0;" src="http://www.duosecurity.com/static/images/recurly-email-logo.png" />
+              <td align="left" height="24px" valign="top" width="100%" style="margin: 0; padding: 40px 40px 0 40px;">
+                <img style="margin:0; padding: 0;" src="logo-green.jpg" />
+            </td>  
         </tr>
-        <tr style="box-shadow:#999 0px 1px 5px;">
+        <tr align="center" height="16px" valign="bottom" width="100%">
+            <td height="16px" style="margin: 0; padding: 0;">
+                <hr style="background: #7ABD5F; height: 1px; border: 0; margin: 0 40px;" />
+            </td>
+        </tr>
+        <tr>
             <td align="center" height="100%" valign="center" width="100%">
               <!--[if (gte mso 9)|(IE)]>
               <table align="center" border="0" cellspacing="0" cellpadding="0" width="600">
@@ -232,6 +242,8 @@
             </td>
         </tr>
   </table>
+  <p style="margin: 0; padding: 16px 0 0 0;"><img src="logo-cisco-gray.png" /></p>
+
 </center>
 </body>
 </html>
